RESOLVED FIXED171300
REGRESSION (r213719): WebGL content on cubeslam.com is 1/4 expected size
https://bugs.webkit.org/show_bug.cgi?id=171300
Summary REGRESSION (r213719): WebGL content on cubeslam.com is 1/4 expected size
Simon Fraser (smfr)
Reported 2017-04-25 17:09:08 PDT
REGRESSION (r213719): WebGL content on cubeslam.com is 1/4 expected size
Attachments
Patch (1.78 KB, patch)
2017-04-25 17:11 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2017-04-25 17:11:37 PDT
Simon Fraser (smfr)
Comment 2 2017-04-25 17:11:58 PDT
WebKit Commit Bot
Comment 3 2017-04-25 18:11:14 PDT
Comment on attachment 308170 [details] Patch Clearing flags on attachment: 308170 Committed r215780: <http://trac.webkit.org/changeset/215780>
WebKit Commit Bot
Comment 4 2017-04-25 18:11:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.