REGRESSION (r213719): WebGL content on cubeslam.com is 1/4 expected size https://bugs.webkit.org/show_bug.cgi?id=171300 rdar://problem/31051538

Reviewed by Dean Jackson.

Propagating the contentsScale to the UI process for canvas content layers causes
scaling issues, so don't do it for contents-provided layers.

No test because WebGL can't be tested in the iOS simulator.

* WebProcess/WebPage/mac/PlatformCALayerRemote.cpp:
(WebKit::PlatformCALayerRemote::PlatformCALayerRemote):


Canonical link: https://commits.webkit.org/188183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215780 268f45cc-cd09-0410-ab3c-d52691b4dbfc