Source/WebKit2/WebProcess/WebPage/mac/PlatformCALayerRemote.cpp
@@ -76,7 +76,7 @@ PlatformCALayerRemote::PlatformCALayerRemote(LayerType layerType, PlatformCALaye
     : PlatformCALayer(layerType, owner)
     , m_context(&context)
 {
-    if (owner) {
+    if (owner && layerType != LayerTypeContentsProvidedLayer) {
         m_properties.contentsScale = owner->platformCALayerDeviceScaleFactor();
         m_properties.notePropertiesChanged(RemoteLayerTreeTransaction::ContentsScaleChanged);
     }
